// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordField > renders with type password by default 1`] = `
<div>
  <div
    class="relative"
    data-test-id="pw"
  >
    <div
      aria-hidden="false"
      class="inline-flex items-center bg-transparent rounded-small transition-colors border rounded-small h-3 w-full focus-within:ring-1 focus-within:ring-neutral-1000"
    >
      <input
        class="flex-1 bg-transparent outline-none placeholder:text-neutral-600 text-neutral-1000 py-0_75 px-1"
        placeholder="Password"
        type="password"
      />
    </div>
    <button
      aria-label="Show password"
      aria-pressed="false"
      class="absolute right-2 top-1/2 -translate-y-1/2 inline-flex items-center justify-center h-6 px-2 text-xs text-neutral-400 hover:text-neutral-600 focus:outline-none focus:ring-1 focus:ring-neutral-1000 cursor-pointer"
      role="button"
      type="button"
    >
      Show
    </button>
  </div>
</div>
`;

exports[`PasswordField > toggles to text when clicking the toggle button and updates aria-label 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      aria-hidden="false"
      class="inline-flex items-center bg-transparent rounded-small transition-colors border rounded-small h-3 w-full focus-within:ring-1 focus-within:ring-neutral-1000"
    >
      <input
        class="flex-1 bg-transparent outline-none placeholder:text-neutral-600 text-neutral-1000 py-0_75 px-1"
        placeholder="Password"
        type="text"
      />
    </div>
    <button
      aria-label="Hide password"
      aria-pressed="true"
      class="absolute right-2 top-1/2 -translate-y-1/2 inline-flex items-center justify-center h-6 px-2 text-xs text-neutral-400 hover:text-neutral-600 focus:outline-none focus:ring-1 focus:ring-neutral-1000 cursor-pointer"
      role="button"
      type="button"
    >
      Hide
    </button>
  </div>
</div>
`;
